# vikunja-mcp

./: AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  ecosystem.config.js  pyproject.toml
.github/workflows/: ci.yml
docs/: extension-hooks.md  forge.md  telemetry.md  vikunja-structure.md
src/vikunja_mcp/: __init__.py  auth.py  client.py  config.py  exceptions.py  hooks.py  server.py  telemetry.py
src/vikunja_mcp/contrib/: README.md  __init__.py  audit_log.py
tests/: conftest.py  test_auth.py  test_client.py  test_contrib_audit.py  test_hardening.py  test_hooks.py  test_parity.py  test_parity_wire.py  test_server.py  test_telemetry.py
