[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vikunja-mcp"
version = "0.1.0"
description = "FastMCP server exposing the Vikunja REST API as scoped, per-agent MCP tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["vikunja", "mcp", "fastmcp", "homelab", "self-hosted", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/TadMSTR/vikunja-mcp"
Repository = "https://github.com/TadMSTR/vikunja-mcp"
Issues = "https://github.com/TadMSTR/vikunja-mcp/issues"

[project.scripts]
vikunja-mcp = "vikunja_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vikunja_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["vikunja_mcp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
